--- a/examples/card/index.html
+++ b/examples/card/index.html
@@ -3,8 +3,7 @@
     <title>devsy-components-example-title</title>
   </head>
   <body>
-    <div id="root">
-    </div>
-	<script src="/static/bundle.js"></script>
+    <div id="root"></div>
+	  <script src="/static/bundle.js"></script>
   </body>
 </html>
