--- a/examples/card/index.html
+++ b/examples/card/index.html
@@ -1,9 +1,11 @@
 <html>
   <head>
     <title>devsy-components-example-title</title>
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spectre.css/0.1.24/spectre.min.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="columns"></div>
 	  <script src="/static/bundle.js"></script>
   </body>
 </html>
