--- a/examples/index.html
+++ b/examples/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="root" class="columns"></div>
-	  <script src="/static/bundle.js"></script>
+	  <script src="/dist/main.js"></script>
   </body>
 </html>
