Add Theme component to get rid of the Spectre css and have it all in one single component

--- a/examples/index.html
+++ b/examples/index.html
@@ -2,7 +2,8 @@
   <head>
     <title>devsy-components-example-title</title>
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spectre.css/0.1.24/spectre.min.css" media="screen" title="no title" charset="utf-8">
+    <!-- Spectre full style, we're moving this to te theme
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spectre.css/0.1.24/spectre.min.css" media="screen" title="no title" charset="utf-8"> -->
   </head>
   <body>
     <div id="root" class="columns"></div>
