--- a/examples/index.html
+++ b/examples/index.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spectre.css/0.1.24/spectre.min.css" media="screen" title="no title" charset="utf-8"> -->
   </head>
   <body>
-    <div id="root" class="columns"></div>
+    <div id="root"></div>
 	  <script src="/dist/main.js"></script>
   </body>
 </html>
